added role precedence middleware
